added white description cards

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,39 @@
 <%= render 'shared/banner' %>
+
+<div class="container">
+
+ <div class="wrapper-grey">
+      <div class="container">
+        <h2>Find someone who shares your love for music</h2>
+        <div class="row">
+        <div class="col-xs-12 col-md-4">
+          <div class="card-white">
+            <%= image_tag "headphones.svg", :class => "avatar", style: "width: 70px;" %>
+            <h3>Find people like you</h3>
+            <p>
+              We know music is important to you. That is why Lovify helps you find people with similar musical tastes.
+            </p>
+          </div>
+        </div>
+        <div class="col-xs-12 col-md-4">
+          <div class="card-white">
+            <%= image_tag "spotify.svg", :class => "avatar", style: "width: 70px;" %>
+            <h3>Easy to use</h3>
+            <p>
+              Just sign up with Facebook, and we'll do the rest. We use your Spotify listens to find your perfect music match
+            </p>
+          </div>
+        </div>
+          <div class="col-xs-12 col-md-4">
+            <div class="card-white">
+              <%= image_tag "date.svg", :class => "avatar", style: "width: 70px;" %>
+              <h3>Ask people out</h3>
+              <p>
+                Don't be shy! Ask your match out. We will find concerts, bars and events that match your common interests for you.
+              </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
