--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,18 @@
 // Specific CSS for your home-page
+.card-white {
+    background: white;
+    padding: 30px;
+    box-shadow: 1px 1px 2px #e7e7e7;
+    border-radius: 3px;
+    margin: 30px 25px;
+    width: 30rem;
+    min-height: 370px;
+}
+
+.wrapper-grey {
+    background: #EDEFF0;
+    color: #4e4e4e;
+    margin-top: 20px;
+    display: flex;
+    text-align: center;
+}
