--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,7 +4,7 @@
 
  <div class="wrapper-grey">
       <div class="container">
-        <h2>Find someone who shares your love for music</h2>
+        <h2 class="title">Find someone who shares your love for music</h2>
         <div class="row">
         <div class="col-xs-12 col-md-4">
           <div class="card-white">
