--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,3 +1,32 @@
+.footer-home {
+  background: #212121;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 100px;
+  padding: 0px 50px;
+  color: #6d6d6d;
+  .fa-heart {
+    color: $purple;
+  };
+}
+.footer-links-home {
+  display: flex;
+  align-items: center;
+  a {
+    color: $light-gray;
+    opacity: 0.15;
+    text-decoration: none;
+    font-size: 24px;
+    padding: 0px 10px;
+    &:hover {
+      color: #757575;
+      opacity: 1;
+
+    };
+  };
+}
+
 .footer {
   background: #F4F4F4;
   display: flex;
@@ -20,6 +49,7 @@
     font-size: 24px;
     padding: 0px 10px;
     &:hover {
+      color: black;
       opacity: 1;
     };
   };
