--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,39 +1,56 @@
 <%= render 'shared/banner' %>
+<div class="body body-home">
+<div class="container container-home">
 
-<div class="container">
+  <h2 class="title">Find someone who shares your love for music</h2>
 
- <div class="wrapper-grey">
-      <div class="container">
-        <h2 class="title">Find someone who shares your love for music</h2>
-        <div class="row">
-        <div class="col-xs-12 col-md-4">
-          <div class="card-white">
-            <%= image_tag "headphones.svg", :class => "avatar", style: "width: 70px;" %>
-            <h3>Find people like you</h3>
-            <p>
-              We know music is important to you. That is why Lovify helps you find people with similar musical tastes.
-            </p>
-          </div>
-        </div>
-        <div class="col-xs-12 col-md-4">
-          <div class="card-white">
-            <%= image_tag "spotify.svg", :class => "avatar", style: "width: 70px;" %>
-            <h3>Easy to use</h3>
-            <p>
-              Just sign up with Facebook, and we'll do the rest. We use your Spotify listens to find your perfect music match
-            </p>
-          </div>
-        </div>
-          <div class="col-xs-12 col-md-4">
-            <div class="card-white">
-              <%= image_tag "date.svg", :class => "avatar", style: "width: 70px;" %>
-              <h3>Ask people out</h3>
-              <p>
-                Don't be shy! Ask your match out. We will find concerts, bars and events that match your common interests for you.
-              </p>
-          </div>
-        </div>
+
+  <figure class="snip1477">
+    <img src="https://static.pexels.com/photos/373945/pexels-photo-373945.jpeg" alt="sample38" />
+    <div class="title">
+      <div>
+        <h4>Find people like you</h4>
       </div>
     </div>
+    <figcaption>
+      <p>We know music is important to you. That is why Lovify helps you find people with similar musical tastes.</p>
+    </figcaption>
+  </figure>
+  <figure class="snip1477">
+    <img src="https://images.pexels.com/photos/340103/pexels-photo-340103.jpeg?w=940&h=650&auto=compress&cs=tinysrgb" alt="sample91" />
+    <div class="title">
+      <div>
+        <h4>Easy to use</h4>
+      </div>
+    </div>
+    <figcaption>
+      <p>Just sign up with Facebook, and we'll do the rest. We use your Spotify listens to find your perfect music match.</p>
+    </figcaption>
+  </figure>
+  <figure class="snip1477">
+    <img src="https://images.unsplash.com/photo-1490111718993-d98654ce6cf7?auto=format&fit=crop&w=750&q=80&ixid=dW5zcGxhc2guY29tOzs7Ozs%3D" alt="sample35" />
+    <div class="title">
+      <div>
+        <h4>Ask people out</h4>
+      </div>
+    </div>
+    <figcaption>
+      <p>Don't be shy! Ask your match out. We will find concerts, bars and events that match your common interests for you. </p>
+    </figcaption>
+  </figure>
+</div>
+</div>
+
+<div class="footer footer-home">
+  <div class="footer-links footer-links-home">
+    <a href="https://github.com/ldeld/"><i class="fa fa-github"></i></a>
+    <a href="https://www.instagram.com/lenarw"><i class="fa fa-instagram"></i></a>
+    <a href="https://fr-fr.facebook.com/lewagonlyon/"><i class="fa fa-facebook"></i></a>
+    <a href="https://twitter.com/kuewl_"><i class="fa fa-twitter"></i></a>
+    <a href="https://www.linkedin.com/"><i class="fa fa-linkedin"></i></a>
+  </div>
+  <div class="footer-copyright">
+    This website is made with <i class="fa fa-heart"></i> by the Hot Rails
   </div>
 </div>
+
