--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -2,6 +2,6 @@
   <div class="banner-content">
     <h3>Lovify</h3>
     <h2>Find your music match</h2>
-    <%= link_to "Start now", user_facebook_omniauth_authorize_path, class: "btn btn-primary" %>
+    <%= link_to 'Start matching', 'users/auth/spotify', class: "btn btn-primary" %>
   </div>
 </div>
