--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -41,8 +41,8 @@
 </div>
 </div>
 
-<div class="footer footer-home">
-  <div class="footer-links footer-links-home">
+<div class="footer-home">
+  <div class="footer-links-home">
     <a href="https://github.com/ldeld/"><i class="fa fa-github"></i></a>
     <a href="https://www.instagram.com/lenarw"><i class="fa fa-instagram"></i></a>
     <a href="https://fr-fr.facebook.com/lewagonlyon/"><i class="fa fa-facebook"></i></a>
