--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -9,7 +9,12 @@
           <%= f.error_notification %>
 
           <div class="form-inputs">
+            <%= f.input :photo %>
+            <%= f.input :photo_cache, as: :hidden %>
+
+
             <%= f.input :email, required: true, autofocus: true %>
+            <%= f.input :description %>
 
             <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
               <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
@@ -33,4 +38,4 @@
       </div>
     </div>
   </div>
-</div><
+</div>
