--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -4,7 +4,7 @@
     <div class="content-banner">
       <h3>Lovify</h3>
       <h2>Find your music match</h2>
-      <%= link_to "Start now", user_facebook_omniauth_authorize_path, class: "btn btn-primary" %>
+      <%= link_to 'Start matching', 'users/auth/spotify', class: "btn btn-primary" %>
     </div>
 
     <div class="slide show" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('https://images.unsplash.com/photo-1483412033650-1015ddeb83d1?auto=format&fit=crop&w=1053&q=80&ixid=dW5zcGxhc2guY29tOzs7Ozs%3D');"></div>
