updated math view to only show 5 artists at first

--- a/app/views/matches/index.html.erb
+++ b/app/views/matches/index.html.erb
@@ -1,4 +1,3 @@
-<% binding.pry %>
 <div class="container">
   <div class="row">
     <% @matches.each do |match| %>
@@ -6,20 +5,22 @@
       <div class="card">
         <% match.user_1 == current_user ? user = match.user_2 : user = match.user_1 %>
         <h2>You matched with <%= user.first_name %></h2>
-        <p>Matchistics: <%= match.score %></p>
-
+        <img src="https://kitt.lewagon.com/placeholder/users/random" class="profile-picture">
+        <h3>Matchistics: <%= match.score %></h3>
         <h4> You have <%= match.artist_listen_in_commons.length %> artists in common </h4>
         <% if match.artist_listen_in_commons.length < 5 %>
           <% match.artist_listen_in_commons.reverse.each do |a_in_common| %>
-            <p class="show-content"><%= a_in_common.artist.name %></p>
+            <p><%= a_in_common.artist.name %></p>
           <% end %>
         <% else %>
           <% match.artist_listen_in_commons.reverse.first(5).each do |a_in_common| %>
             <p class="show-content"><%= a_in_common.artist.name %></p>
           <% end %>
-          <% match.artist_listen_in_commons.reverse.drop(5).each do |a_in_common| %>
-            <p class="hide-content"><%= a_in_common.artist.name %></p>
-          <% end %>
+          <div id="artist-list" class="hidden">
+            <% match.artist_listen_in_commons.reverse.drop(5).each do |a_in_common| %>
+              <p><%= a_in_common.artist.name %></p>
+            <% end %>
+          </div>
           <a href="#" id="show-artists">Show all</a>
         <% end %>
         <% unless match.track_listen_in_commons.empty? %>
