--- a/app/assets/stylesheets/matches/_index.scss
+++ b/app/assets/stylesheets/matches/_index.scss
@@ -5,11 +5,19 @@
   margin: 10px;
 }
 
-.hide-content {
-  display: none;
-  transition: all 0.5s ease-out;
+.profile-picture {
+  width: 400px;
+}
+
+.hidden {
+  opacity: 0;
+  max-height: 0;
+  overflow: hidden;
+  transition: all 0.5s;
 }
 
 .show-content {
-  transition: all 0.5s ease-out;
+  opacity: 1;
+  max-height: 10000px;
+  transition: all 0.5s;
 }
