--- a/app/views/matches/show.html.erb
+++ b/app/views/matches/show.html.erb
@@ -1,1 +1,7 @@
+
+<%= @match.user_1_id %>
 <%= User.find(@match.user_1_id).email %> might fit with <%= User.find(@match.user_2_id).email %> ;)
+<%= link_to("No", match_path(@match, {match:{hide: true}}), method: :put)%>
+
+<%= link_to("Yes", match_path(@match, {match:{asker: @user.id}}), method: :put)%>
+
