--- a/app/views/matches/index.html.erb
+++ b/app/views/matches/index.html.erb
@@ -33,21 +33,23 @@
           </div>
         <% end %>
         <br>
-        <h4>Tracks you both like: </h4>
-        <% if match.track_listen_in_commons.length < 5 %>
-          <% match.track_listen_in_commons.reverse.each do |tr_in_common| %>
-            <p><%= tr_in_common.track.name %></p>
-          <% end %>
-        <% else %>
-          <% match.track_listen_in_commons.reverse.first(5).each do |tr_in_common| %>
-            <p class="show-content"><%= tr_in_common.track.name %></p>
-          <% end %>
-          <div id="track-list" class="hidden">
-            <% match.track_listen_in_commons.reverse.drop(5).each do |tr_in_common| %>
+        <% unless match.track_listen_in_commons.empty? %>
+          <h4>Tracks you both like: </h4>
+          <% if match.track_listen_in_commons.length < 5 %>
+            <% match.track_listen_in_commons.reverse.each do |tr_in_common| %>
               <p><%= tr_in_common.track.name %></p>
             <% end %>
-          </div>
-          <a href="#" id="show-full-list">Show all</a>
+          <% else %>
+            <% match.track_listen_in_commons.reverse.first(5).each do |tr_in_common| %>
+              <p class="show-content"><%= tr_in_common.track.name %></p>
+            <% end %>
+            <div id="track-list" class="hidden">
+              <% match.track_listen_in_commons.reverse.drop(5).each do |tr_in_common| %>
+                <p><%= tr_in_common.track.name %></p>
+              <% end %>
+            </div>
+            <a href="#" id="show-full-list">Show all</a>
+          <% end %>
         <% end %>
       </div>
     </div>
