--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,13 +1,68 @@
 /* Main navbar */
-.navbar-wagon {
+.sidebar-wagon {
   box-shadow: 0 1px 5px 0 rgba(0,0,0,0.07),0 1px 0 0 rgba(0,0,0,0.03);
   background: white;
   transition: all 0.3s ease;
-  height: 70px;
+  width: 17%;
   padding: 0px 30px;
   display: flex;
+  position:fixed;
+  flex-direction: column;
   align-items: center;
+  left: 0;
+  top: 0;
+  bottom: 0;
+}
+
+.border {
+  border-bottom: 2px solid #cccccc;
+  padding-left: 120px;
+  padding-right: 70px;
+  margin-bottom: 20px;
+  margin-top: 20px;
+}
+
+.border-light {
+  border-bottom: 1px solid #ddd;
+  margin-bottom: 20px;
+  margin-top: 20px;
+  margin-right: 15px;
+}
+
+
+#logo-name{
+  display: inline;
+  text-decoration: none;
+  color: black;
+  opacity: 0.5;
+  &:hover {
+    color: black;
+    opacity: 1;
+  };
+}
+
+.sidebar-logo{
+  margin-bottom: 5px;
+  margin-top: 15px;
+  margin-right: 5px;
+  height: 57px;
+}
+
+
+.sidebar-menu{
   justify-content: space-between;
+}
+
+.sidebar-avatar {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  margin-top: 10px;
+}
+
+#user-name-sidebar {
+  color: black;
+  opacity: 0.5;
 }
 
 /* Logo */
@@ -16,62 +71,36 @@
 }
 
 /* User Avatar */
-.navbar-wagon .avatar {
-  height: 35px;
-  width: 35px;
+.sidebar-wagon .avatar {
+  height: 70px;
+  width: 70px;
   border-radius: 50%;
 }
 
-/* Right section */
-.navbar-wagon-right {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-/* Basic navbar item */
-.navbar-wagon-item {
-  cursor: pointer;
-  padding: 0 20px;
-}
-
-/* Navbar link */
-.navbar-wagon-link {
+.sidebar-link {
   color: #616668;
-  font-size: 14px;
 }
-.navbar-wagon-link:hover {
+
+.sidebar-link:hover {
   color: #da552f;
   text-decoration: none;
 }
 
-/* Dropdown menu */
-.navbar-wagon-dropdown-menu {
-  margin-top: 15px;
-  box-shadow: 1px 1px 4px #E6E6E6;
-  border-color: #E6E6E6;
+
+.sidebar-link a {
+  color: #616668;
+    &:hover {
+    color: black;
+    opacity: 1;
+  };
 }
-.navbar-wagon-dropdown-menu li > a {
-  transition: color 0.3s ease;
-  font-weight: lighter !important;
-  color: #999999 !important;
-  font-size: 15px !important;
-  line-height: 22px !important;
-  padding: 10px 20px;
+
+
+.list-unstyled {
+  margin-top: 50px;
 }
-.navbar-wagon-dropdown-menu li > a:hover {
-  background: transparent !important;
-  color: black !important;
+
+.list-unstyled li {
+  color: #616668;
 }
-.navbar-wagon-dropdown-menu:before {
-  content: ' ';
-  height: 10px;
-  width: 10px;
-  position: absolute;
-  right: 10px;
-  top: -6px;
-  background-color: white;
-  transform: rotate(45deg);
-  border-left: 1px solid #E6E6E6;
-  border-top: 1px solid #E6E6E6;
-}
+
