--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -6,48 +6,41 @@
             <h1>Edit your profile</h1>
 
 
-        <form>
           <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
           <%= f.error_notification %>
           <div class="section"><span>1</span>Your profile</div>
 
           <div class="inner-wrap">
           <div class="form-inputs">
+            <%= f.input :first_name %>
             <%= f.input :photo %>
             <%= f.input :photo_cache, as: :hidden %>
-            <%= f.input :email, required: true, autofocus: true %>
-             <form action="">
+        <!--      <form action="">
               <label> I'm a:<br>
               <input type="radio" name="gender" value="male"> Male<br>
               <input type="radio" name="gender" value="female"> Female<br>
             </label>
-            </form>
+            </form> -->
           </div>
           </div>
 
           <div class="section"><span>2</span>Description</div>
           <div class="inner-wrap">
             <%= f.input :description %>
-            <form action="">
+        <!--     <form action="">
             <label> Interested in:<br>
               <input type="radio" name="gender" value="male"> Male<br>
               <input type="radio" name="gender" value="female"> Female<br>
               <input type="radio" name="gender" value="Both"> Both
             </label>
-            </form>
+            </form> -->
           </div>
 
-          <div class="section"><span>3</span>Passwords</div>
-          <div class="inner-wrap">
+
 
             <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
               <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
             <% end %>
-
-            <%= f.input :password, autocomplete: "off", hint: "leave it blank if you don't want to change it", required: false %>
-            <%= f.input :password_confirmation, required: false %>
-            <%= f.input :current_password, hint: "we need your current password to confirm your changes", required: true %>
-          </div>
 
           <div class="form-actions">
             <%= f.button :submit, "Update", class: "btn btn-primary" %>
