--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,58 +1,40 @@
-<div class="navbar-wagon">
+<div class="sidebar-wagon">
   <!-- Logo -->
-  <%= link_to root_path, class: "navbar-wagon-brand" do %>
-    <%= image_tag "logo.png", height: 50 %>
-  <% end %>
 
-  <!-- Right Navigation -->
-  <div class="navbar-wagon-right hidden-xs hidden-sm">
 
-    <% if user_signed_in? %>
+      <div class="sidebar-logo">
+        <%= link_to root_path, id: "logo-container" do %>
+          <%= image_tag "logo.png", height: 50 %>
+          <p id="logo-name">Lovify</p>
+        <% end %>
+      </div>
 
-      <!-- Links when logged in -->
-      <%= link_to "Host", "#", class: "navbar-wagon-item navbar-wagon-link" %>
-      <%= link_to "Trips", "#", class: "navbar-wagon-item navbar-wagon-link" %>
-      <%= link_to "Messages", "#", class: "navbar-wagon-item navbar-wagon-link" %>
+      <div class="border"></div>
 
-      <!-- Avatar with dropdown menu -->
-      <div class="navbar-wagon-item">
-        <div class="dropdown">
-         <%= cl_image_tag current_user.photo, height: 35, width: 35, crop: :fill, class: "avatar dropdown-toggle", id: "navbar-wagon-menu", "data-toggle" => "dropdown" %>
-          <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
-            <li>
-              <%= link_to "#" do %>
-                <i class="fa fa-user"></i> <%= t(".profile", default: "Profile") %>
-              <% end %>
-            </li>
-            <li>
-              <%= link_to "#" do %>
-                <i class="fa fa-cog"></i>  <%= t(".settings", default: "Settings") %>
-              <% end %>
-            </li>
-            <li>
-              <%= link_to destroy_user_session_path, method: :delete do %>
-                <i class="fa fa-sign-out"></i>  <%= t(".sign_out", default: "Log out") %>
-              <% end %>
-            </li>
-          </ul>
+    <div class="sidebar-menu">
+      <div class="sidebar-avatar">
+        <%= cl_image_tag current_user.photo, height: 35, width: 35, crop: :fill, class: "avatar", id: "navbar-wagon-menu" %>
+        <div id="user-name-sidebar">
+          <%= current_user.first_name %>
         </div>
       </div>
-    <% else %>
-      <!-- Login link (when logged out) -->
-      <%= link_to t(".sign_in", default: "Login"), new_user_session_path, class: "navbar-wagon-item navbar-wagon-link" %>
-    <% end %>
+    <div class="border"></div>
+    <ul class="list-unstyled">
+      <li><%= link_to "Profile", "#", class: "sidebar-link" %></li>
+        <div class="border-light"></div>
+      <li><%= link_to "Messages", "#", class: "sidebar-link" %></li>
+        <div class="border-light"></div>
+      <li><%= link_to "Dates", "#", class: "sidebar-link" %></li>
+      <div class="border-light"></div>
+      <li><div class="sidebar-link"><%= link_to destroy_user_session_path, method: :delete do %>
+      <%= t(".sign_out", default: "Log out") %></div>
+      <% end %></li>
+    </ul>
+    <div class="border-light"></div>
   </div>
 
-  <!-- Dropdown list appearing on mobile only -->
-  <div class="navbar-wagon-item hidden-md hidden-lg">
-    <div class="dropdown">
-      <i class="fa fa-bars dropdown-toggle" data-toggle="dropdown"></i>
-      <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
-        <li><a href="#">Some mobile link</a></li>
-        <li><a href="#">Other one</a></li>
-        <li><a href="#">Other one</a></li>
-      </ul>
-    </div>
-  </div>
 </div>
+
+
+
 
