fixed error home page

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
 <%= render 'shared/banner' %>
-<div class="body body-profile">
+<div class="body body-home">
 <div class="container container-home">
 
   <h2 class="title">Find someone who shares your love for music</h2>
