--- a/app/assets/stylesheets/matches/_index.scss
+++ b/app/assets/stylesheets/matches/_index.scss
@@ -4,6 +4,7 @@
   border-radius: 5px;
   margin: 10px;
   height: 85vh;
+  h2 { text-align: left; }
 }
 
 #more-info .card {
@@ -11,8 +12,18 @@
 }
 
 .profile-picture {
-  height: 50%;
+  width: 300px;
   margin: 0 auto;
+  border-radius: 5px;
+}
+
+.img-container {
+  display: flex;
+  align-items: center;
+}
+
+.matchistics {
+  padding: 0 40px;
 }
 
 .hidden {
