--- a/app/assets/stylesheets/matches/_index.scss
+++ b/app/assets/stylesheets/matches/_index.scss
@@ -1,44 +1,1 @@
-.card {
-  background-color: white;
-  padding: 10px;
-  border-radius: 5px;
-  margin: 10px;
-  height: 85vh;
-  h2 { text-align: left; }
-}
-
-#more-info .card {
-  h4 { padding-top: 10px; }
-}
-
-.profile-picture {
-  width: 300px;
-  margin: 0 auto;
-  border-radius: 5px;
-}
-
-.img-container {
-  display: flex;
-  align-items: center;
-}
-
-.matchistics {
-  padding: 0 40px;
-}
-
-.hidden {
-  opacity: 0;
-  max-height: 0;
-  overflow: hidden;
-  transition: all 0.5s;
-}
-
-.show-content {
-  opacity: 1;
-  max-height: 10000px;
-  transition: all 0.5s;
-}
-
-.scrollable {
-  overflow-y: scroll;
-}
+@import 'show'
