--- a/app/views/matches/index.html.erb
+++ b/app/views/matches/index.html.erb
@@ -1,55 +1,35 @@
-<div class="container">
-  <div class="row">
-    <% match = @matches.first %>
-    <div class="col-xs-6 col-xs-offset-3" id="profile-card">
-      <div class="card">
-        <% match.user_1 == current_user ? user = match.user_2 : user = match.user_1 %>
-        <h2>You matched with <%= user.first_name %></h2>
-        <img src="https://kitt.lewagon.com/placeholder/users/random" class="profile-picture">
-        <h3>Matchistics: <%= match.score %></h3>
-        <h4> You have <%= match.artist_listen_in_commons.length %> artists in common </h4>
-        <% unless match.track_listen_in_commons.empty? %>
-          <h4>And there are <%= match.track_listen_in_commons.length %> tracks you both like! </h4>
-        <% end %>
-        <%= link_to "See full details", "#", class: "btn btn-primary", id: "show-more-info" %>
-      </div>
-    </div>
-    <!-- This is the hidden "more info" card-->
-    <div class="col-xs-6" >
-      <div class="card scrollable hidden" id="more-info">
-        <h4>Artists in common: </h4>
-        <% if match.artist_listen_in_commons.length < 5 %>
-          <% match.artist_listen_in_commons.reverse.each do |a_in_common| %>
-            <p><%= a_in_common.artist.name %></p>
-          <% end %>
-        <% else %>
-          <% match.artist_listen_in_commons.reverse.first(5).each do |a_in_common| %>
-            <p class="show-content"><%= a_in_common.artist.name %></p>
-          <% end %>
-          <div id="artist-list" class="hidden">
-            <% match.artist_listen_in_commons.reverse.drop(5).each do |a_in_common| %>
-              <p><%= a_in_common.artist.name %></p>
-            <% end %>
+<div class="container-inbox">
+  <h2>Hi, <%= current_user.first_name %>!</h2>
+  <div class="col-xs-12 col-sm-10 col-sm-offset-1">
+    <h4>They asked you out:</h4>
+    <ul class="inbox">
+      <% @match_requests.each do |match_request| %>
+        <li class="message">
+          <%= cl_image_tag User.find(match_request.asker).photo, height: 80, width: 80, crop: :fill, gravity: :face, class: "avatar" %>
+          <div class="message-name">
+            <h3><%= User.find(match_request.asker).first_name %></h3>
           </div>
-        <% end %>
-        <br>
-        <h4>Tracks you both like: </h4>
-        <% if match.track_listen_in_commons.length < 5 %>
-          <% match.track_listen_in_commons.reverse.each do |tr_in_common| %>
-            <p><%= tr_in_common.track.name %></p>
-          <% end %>
-        <% else %>
-          <% match.track_listen_in_commons.reverse.first(5).each do |tr_in_common| %>
-            <p class="show-content"><%= tr_in_common.track.name %></p>
-          <% end %>
-          <div id="track-list" class="hidden">
-            <% match.track_listen_in_commons.reverse.drop(5).each do |tr_in_common| %>
-              <p><%= tr_in_common.track.name %></p>
-            <% end %>
+          <div class="message-status">
+            Wanna go on a date?
           </div>
-          <a href="#" id="show-full-list">Show all</a>
-        <% end %>
-      </div>
-    </div>
+        </li>
+      <% end %>
+    </ul>
+  </div>
+  <div class="col-xs-12 col-sm-10 col-sm-offset-1">
+    <h4>You've matched:</h4>
+    <ul class="inbox">
+      <% @matches_done.each do |match_done| %>
+        <li class="message">
+          <%= cl_image_tag User.find(match_done.asker).photo, height: 80, width: 80, crop: :fill, gravity: :face, class: "avatar" %>
+          <div class="message-name">
+            <h3><%= User.find(match_done.asker).first_name %></h3>
+          </div>
+          <div class="message-status">
+            What next?
+          </div>
+        </li>
+      <% end %>
+    </ul>
   </div>
 </div>
