--- a/app/views/users/profile.html.erb
+++ b/app/views/users/profile.html.erb
@@ -18,14 +18,14 @@
     </div>
   </div>
 
-  <div class="row" >
-    <div class= "profile-header">
-      <h3>This is your music profil</h3>
+  <div class="row row-image" >
+    <div class= "header-image">
+       <h3>Your music taste</h3>
     </div>
   </div>
 
   <div class="row" >
-    <div class="profile-header ">
+    <div class="profile-header">
       <h4> Top artists Listens: </h4>
     </div>
       <ul class="profile-content">
