--- a/app/assets/stylesheets/users/_profile.scss
+++ b/app/assets/stylesheets/users/_profile.scss
@@ -16,24 +16,42 @@
 
 .profile-header {
   text-align: center;
-  margin-top: 50px;
+  margin-top: 25px;
   padding: 20px;
 }
 
 
 .header-show {
   display: flex;
-  background-color: white;
   align-items: center;
   margin-top: 20px;
   padding: 10px;
+  padding-right: 20px;
+  padding-left: 20px;
   margin: 16px;
-  color: #212121;
 }
 
 
 .profile-content{
-  margin-left: 10px;
+  margin-left: 20px;
+  margin-bottom: 20px;
 }
 
+.row-image {
+  margin-top: 20px;
+  display: flex;
+  align-items: center;
+  margin-left: 0px;
+}
 
+.header-image{
+  background-image: linear-gradient(-225deg, rgba(87, 94, 103, 0.8) 0%, rgba(36, 47, 56, 0.8) 50%),url("https://images.pexels.com/photos/290657/pexels-photo-290657.jpeg?w=1260&h=750&auto=compress&cs=tinysrgb");
+  height:170px;
+  width: 800px;
+  background-size:cover;
+  background-repeat: no-repeat;
+  background-padding: 15px;
+  overflow:hidden;
+  text-align: center;
+  padding-top: 20px;
+}
