--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -29,7 +29,7 @@
 
 .footer {
   margin-left: 15%;
-  background: #F4F4F4;
+  background: #e5e5e5;
   display: flex;
   align-items: center;
   justify-content: space-between;
