--- a/app/assets/stylesheets/users/_profile.scss
+++ b/app/assets/stylesheets/users/_profile.scss
@@ -6,8 +6,8 @@
 .container-user {
   width: 800px;
   margin-left: 30%;
-  background-color: #636363;
-  color: #e5e5e5;
+  background-color: #d6d6d6;
+  box-shadow: 0 0 10px rgba(50,50,50,0.7);
 }
 
 .left-button{
@@ -46,12 +46,19 @@
 
 .header-image{
   background-image: linear-gradient(-225deg, rgba(87, 94, 103, 0.8) 0%, rgba(36, 47, 56, 0.8) 50%),url("https://images.pexels.com/photos/290657/pexels-photo-290657.jpeg?w=1260&h=750&auto=compress&cs=tinysrgb");
-  height:170px;
+  box-shadow: 0 0 7px rgba(70,70,70,0.5);
+  height:180px;
   width: 800px;
   background-size:cover;
   background-repeat: no-repeat;
   background-padding: 15px;
   overflow:hidden;
   text-align: center;
-  padding-top: 20px;
+  padding-top: 25px;
+  h3{
+    background-color: rgba(245,245,245,0.4);
+    margin-right: 270px;
+    margin-left: 270px;
+    color: #111;
+  }
 }
