--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -24,7 +24,7 @@
       </div>
     </div>
     <figcaption>
-      <p>Just sign up with Facebook, and we'll do the rest. We use your Spotify listens to find your perfect music match.</p>
+      <p>Just sign up with Spotify, and we'll do the rest. We use your Spotify listens to find your perfect music match.</p>
     </figcaption>
   </figure>
   <figure class="snip1477">
@@ -41,8 +41,8 @@
 </div>
 </div>
 
-<div class="footer-home">
-  <div class="footer-links-home">
+<div class="footer footer-home">
+  <div class="footer-links">
     <a href="https://github.com/ldeld/"><i class="fa fa-github"></i></a>
     <a href="https://www.instagram.com/lenarw"><i class="fa fa-instagram"></i></a>
     <a href="https://fr-fr.facebook.com/lewagonlyon/"><i class="fa fa-facebook"></i></a>
