--- a/app/assets/stylesheets/pages/_devise.scss
+++ b/app/assets/stylesheets/pages/_devise.scss
@@ -48,7 +48,7 @@ a:hover {
     padding:30px;
     margin-left: 10px;
     margin:40px auto;
-    background: #FFF;
+    background: $grey-card;
     border-radius: 10px;
     -webkit-border-radius:10px;
     -moz-border-radius: 10px;
