--- a/app/assets/stylesheets/users/_profile.scss
+++ b/app/assets/stylesheets/users/_profile.scss
@@ -26,7 +26,7 @@
   -webkit-box-shadow: 0px 5px 28px rgba(0,0,0,.4);
   box-shadow: 0px 5px 28px rgba(0,0,0,.4);
   border-radius:5px;
-  background-color: #d6d6d6;
+  background-color: $grey-card;
 }
 
 
@@ -47,8 +47,8 @@
 
 .profile .image{
   border-radius:50%;
-  width:120px;
-  height:120px;
+  width: 140px;
+  height: 140px;
   display:block;
   margin:-15% auto;
   position:relative;
@@ -80,7 +80,6 @@
 .profile h4{
   margin-top:80px;
   line-height:24px;
-  color:rgba(0,0,0,.8);
   font-size:1.2em;
   font-weight:800;
 }
@@ -95,8 +94,6 @@
 .about article{
   font-size:14px;
   line-height:24px;
-  color:rgba(0,0,0,.6);
-  font-weight:800;
 }
 
 
@@ -115,8 +112,8 @@
   text-align: center;
   padding: 8px;
   margin: 20px;
-  background-color: #fff;
-  box-shadow: 0 0 8px rgba(235,235,235,0.5);
+  background-color: $grey-back;
+  box-shadow: 0 0 8px rgba(37, 37, 37, 0.4);
 }
 
 
