--- a/app/views/matches/index.html.erb
+++ b/app/views/matches/index.html.erb
@@ -1,11 +1,16 @@
 <div class="container-inbox">
-  <h2>Hi, <%= current_user.first_name %>!</h2>
+  <h2>Hi, <%= @user.first_name %>!</h2>
   <div class="col-xs-12 col-sm-10 col-sm-offset-1">
     <h4>They asked you out:</h4>
     <ul class="inbox">
       <% @match_requests.each do |match_request| %>
         <li class="message">
-          <%= cl_image_tag User.find(match_request.asker).photo, height: 80, width: 80, crop: :fill, gravity: :face, class: "avatar" %>
+          <% if User.find(match_request.asker).photo.path.nil? %>
+            <img src=<%= User.find(match_request.asker).spotify_photo %> height="80", width="80", class="avatar" >
+          <% else %>
+            <%= cl_image_tag User.find(match_request.asker).photo, height: 80, width: 80, crop: :fill, gravity: :face, class: "avatar" %>
+          <% end %>
+
           <div class="message-name">
             <h3><%= User.find(match_request.asker).first_name %></h3>
           </div>
@@ -21,10 +26,34 @@
     <ul class="inbox">
       <% @matches_done.each do |match_done| %>
         <li class="message">
-          <%= cl_image_tag User.find(match_done.asker).photo, height: 80, width: 80, crop: :fill, gravity: :face, class: "avatar" %>
+
+          <% if match_done.asker == @user.id %>
+            <% if User.find(match_done.receiver).photo.path.nil? %>
+              <%= image_tag User.find(match_done.receiver).spotify_photo, height: 80, width: 80, crop: :fill, gravity: :face, class: "avatar" %>
+            <% else %>
+              <%= cl_image_tag User.find(match_done.receiver).photo, height: 80, width: 80, crop: :fill, gravity: :face, class: "avatar" %>
+            <% end %>
+
+          <div class="message-name">
+            <h3><%= User.find(match_done.receiver).first_name %></h3>
+          </div>
+
+
+          <% else %>
+
+            <% if User.find(match_done.asker).photo.nil? %>
+              <%= image_tag User.find(match_done.asker).spotify_photo, height: 80, width: 80, crop: :fill, gravity: :face, class: "avatar" %>
+            <% else %>
+              <%= cl_image_tag User.find(match_done.asker).photo, height: 80, width: 80, crop: :fill, gravity: :face, class: "avatar" %>
+              <% end %>
+
           <div class="message-name">
             <h3><%= User.find(match_done.asker).first_name %></h3>
           </div>
+
+          <% end %>
+
+
           <div class="message-status">
             What next?
           </div>
