--- a/app/views/users/profile.html.erb
+++ b/app/views/users/profile.html.erb
@@ -1,6 +1,6 @@
 <div class="body body-profile">
 
-<div class="container container-profile">
+<div class="container-profile">
   <div class="header-image"></div>
   <div class="content">
    <aside class="aside-01">
